# animate_ai

./: .gitignore  app.py  conversion_service.py  main.py  pyproject.toml  run.py
.github/workflows/: python-ci.yml
controller/: controller.py
prompts/: prompts.py
services/: animate_graph.py  conversion_service.py
src/: __init__.py
src/controller/: controller.py
src/services/: animate_graph.py
static/: index.html
